--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@ scservo_sdk/__pycache__/
 pump/
 onemin-Ground-2017-06-04.csv
 readme.md
-onemin-Ground-2017-06-04 -v2.csv
+onemin-Ground-2017-06-04-v2.csv
