--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ onemin-Ground-2017-06-04.csv
 readme.md
 onemin-Ground-2017-06-04-v2.csv
 pump.log
+relay.log
+voltage_collector.log
+power_supply.log
