--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,43 @@ logs/gearpump.log
 logs/servo.log
 logs/pressuresensor.log
 logs/leakage_sensor.log
+logs/pump.log.1
+logs/relay.log.1
+logs/voltage_collector.log.1
+logs/power_supply.log.1
+logs/gearpump.log.1
+logs/servo.log.1
+logs/pressuresensor.log.1
+logs/leakage_sensor.log.1
+logs/pump.log.2
+logs/relay.log.2
+logs/voltage_collector.log.2
+logs/power_supply.log.2
+logs/gearpump.log.2
+logs/servo.log.2
+logs/pressuresensor.log.2
+logs/leakage_sensor.log.2
+logs/pump.log.3
+logs/relay.log.3
+logs/voltage_collector.log.3
+logs/power_supply.log.3
+logs/gearpump.log.3
+logs/servo.log.3
+logs/pressuresensor.log.3
+logs/leakage_sensor.log.3
+logs/pump.log.4
+logs/relay.log.4
+logs/voltage_collector.log.4
+logs/power_supply.log.4
+logs/gearpump.log.4
+logs/servo.log.4
+logs/pressuresensor.log.4
+logs/leakage_sensor.log.4
+logs/pump.log.5
+logs/relay.log.5
+logs/voltage_collector.log.5
+logs/power_supply.log.5
+logs/gearpump.log.5
+logs/servo.log.5
+logs/pressuresensor.log.5
+logs/leakage_sensor.log.5
