Complete state machine method

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,10 @@ logs/interop_worker.log.2
 logs/interop_worker.log.3
 logs/interop_worker.log.4
 logs/interop_worker.log.5
+onemin-Ground-2018-01-02v2.csv
+logs/power_supply.log.6
+logs/power_supply.log.7
+logs/power_supply.log.8
+logs/power_supply.log.9
+logs/power_supply.log.10
+onemin-Ground-2018-01-02.csv
