--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ pump/
 onemin-Ground-2017-06-04.csv
 readme.md
 onemin-Ground-2017-06-04-v2.csv
+onemin-Ground-2018-01-02.csv
 logs/pump.log
 logs/relay.log
 logs/voltage_collector.log
