--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ logs/power_supply.log.8
 logs/power_supply.log.9
 logs/power_supply.log.10
 onemin-Ground-2018-01-02.csv
+logs/data_update_worker.log
