Complete voltage correction function.

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ logs/power_supply.log.9
 logs/power_supply.log.10
 onemin-Ground-2018-01-02.csv
 logs/data_update_worker.log
+onemin-Ground-2018-01-03.csv
