--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,8 @@ logs/power_supply.log.10
 onemin-Ground-2018-01-02.csv
 logs/data_update_worker.log
 onemin-Ground-2018-01-03.csv
+onemin-Ground-2018-01-04.csv
+onemin-Ground-2018-01-05.csv
+onemin-Ground-2018-01-06.csv
+onemin-Ground-2018-01-07.csv
+onemin-Ground-2018-01-08.csv
