--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,10 @@ onemin-Ground-2018-01-05.csv
 onemin-Ground-2018-01-06.csv
 onemin-Ground-2018-01-07.csv
 onemin-Ground-2018-01-08.csv
+onemin-Ground-2018-06-12.csv
+onemin-Ground-2018-06-13.csv
+onemin-Ground-2018-06-14.csv
+onemin-Ground-2018-06-15.csv
+onemin-Ground-2018-06-16.csv
+onemin-Ground-2018-06-17.csv
+onemin-Ground-2018-06-18.csv
